kustomize/overlays/uat/deployment_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ibms-deployment
  labels:
    app: ibms-uat
spec:
  selector:
    matchLabels:
      app: ibms-uat
  template:
    metadata:
      labels:
        app: ibms-uat
    spec:
      containers:
      - name: ibms
        image: ghcr.io/dbca-wa/ibms
        imagePullPolicy: Always
