kustomize/overlays/uat/deployment_patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ibms-deployment
spec:
  template:
    spec:
      containers:
        - name: ibms
