kustomize/overlays/uat/deployment_uat_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ibms
spec:
  template:
    spec:
      containers:
      - name: ibms
        imagePullPolicy: Always
