kustomize/overlays/uat/statefulset_uat_patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ibms-db-statefulset
spec:
  serviceName: ibms-db-uat
  selector:
    matchLabels:
      workloadselector: ibms-db-uat
  template:
    metadata:
      labels:
        workloadselector: ibms-db-uat
    spec:
      containers:
      - name: ibms-db
