kustomize/overlays/uat/service_patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: ibms-clusterip
spec:
  type: ClusterIP
  selector:
    app: ibms-deployment
    variant: uat
