kustomize/overlays/uat/service_patch.yml
apiVersion: v1
kind: Service
metadata:
  name: ibms-webserver
spec:
  type: ClusterIP
  selector:
    app: ibms-webserver
    variant: uat
